really gotta start doing smaller commits

--- a/Lucid.Web/src/index.scss
+++ b/Lucid.Web/src/index.scss
@@ -65,3 +65,14 @@ i {
     display: flex;
     justify-content: flex-end;
 }
+
+.button-bar {
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 10px;
+}
+
+.dialog-footer {
+  display: flex;
+  justify-content: flex-end;
+}
